@@ -3,7 +3,7 @@ New in v0.7.07 (2016/01/??)
 * Merged in lp:~matthew-t-bentley/duplicity/b2
   - Fix import and error typos.
   - Allow multiple backups in the same bucket.
-  - Fixes #1523498.
+  - Fixes bug #1523498.
   - A couple fixes allowing multiple backups to be hosted in different
     folders in the same bucket as well as some logging for -v9.
 * Random stuff:
@@ -27,6 +27,10 @@ New in v0.7.07 (2016/01/??)
 * Fix minor pep8 nit in collections.py
 * Applied changes from ralle-ubuntu to fix bug 1072130.
   - duplicity does not support ftpes://
+* Fixed bug #1296793 - Failed to create bucket
+  - use S3Connection.lookup() to check bucket exists
+  - skips Boto's Exception processing for this check
+  - dupe of bug #1507109 and bug #1537185
 
 
 New in v0.7.06 (2015/12/07)
